# CommunicationLib

./: CMakeLists.txt
include/: CommunicationConfig.hpp  Ethernet.hpp  Protocol.hpp  RuntimeError.hpp
src/: Ethernet.cpp  main.cpp
